# data_engineering_complete_pipeline

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: env.py
app/controller/: extractor.py  transformer.py
app/core/: db.py
app/utils/: metadata.py  schema.py
astro/: requirements.txt
astro/include/: main.py
extract_load/: main.py  pyproject.toml
extract_load/config/: env.py
extract_load/core/: clients.py
extract_load/secret/: .env.example
extract_load/utils/: logger.py
extract_load_api/: pyproject.toml
extract_load_sql/: Dockerfile  main.py  pyproject.toml
extract_load_sql/config/: env.py
extract_load_sql/core/: clients.py
extract_load_sql/secret/: .env.example
localstack/: awslocal.sh  docker-compose.yml
localstack/tools/: Dockerfile
localstack/tools/terraform/: main.tf
